# AoT-PsyPhyBENCH

./: README.md  pyproject.toml  run_cosmos_reason1_zero_shot.sh  run_fb_task_mm_pre_process.py  run_gemini_reasoning_zero_shot_with_reasoning_effort.sh  run_openai_no_reasoning_few_shot.sh  run_openai_no_reasoning_zero_shot.sh  run_openai_reasoning_model_zero_shot_with_reasoning_effort.sh
neuro_paper_data/: few_shot_no_reasoning.json  few_shot_observe_reasoning.json  neuro_paper_data.json
neuro_paper_data/neuro_paper_data/: AoT-PsyPhyBENCH_dataset_metadata.csv  AoT_dataset_metadata.csv  README  README.md
