[project]
name = "fb-task-api-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "ipdb>=0.13.13",
    "pandas>=2.3.0",
    "qwen-vl-utils>=0.0.11",
    "scikit-learn>=1.7.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "vllm>=0.9.1",
]
